# thesis_code

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  pyproject.toml  requirements.txt  wfdb_utils.py
coefficients/: __init__.py  coefficients.py  k95.py  param_calculator.py  rqa.py
data_handling/: __init__.py  data_reader.py  dataset.py  db_loader.py  gbm_reader.py  nature_reader.py  physionet_loader.py  physionet_reader.py  signaldataset.py  um_data_reader.py
embeddings/: __init__.py  lag_emebedding.py
embeddings/utils/: __init__.py  fnn.py  mutual_information.py  spectral_envelope.py
metrics/: __init__.py  cosine_distance.py  minkowski_distance.py
neural_networks/: CNN.py  VAE.py  __init__.py  alexnet.py  autoencoder.py  rpcombi.py  vgg.py
neural_networks/functionality/: __init__.py  get_activations.py  get_opt_input_for_activation.py  plot_scatter_activations.py  save_activation.py  save_weights.py
notebooks/: RIEDL2015.ipynb  Test_RPs_for_multivariate_signals.ipynb  Test_kymatio.ipynb  read_Physionet_2017_data.ipynb  read_nature_data.ipynb  use_wfdb_for_physio_net_data.ipynb
recurrence_plots/: __init__.py  recurrence_plot.py  utils.py
signal_processing/: PCA.py  QRS_detection.py  __init__.py  adaptive_window_signal_splitting.py  asvc.py  byest.py  byest2.py  detqrs.py  fixed_window_signal_splitting.py  normalize.py  pipeline.py  qrs_cancellation.py  r_peak_detection.py  r_peak_detector.py  signal_splitting.py
signals/: GP_kernels.py  __init__.py  artificial_signals.py  sinusoid
visualizations/: __init__.py  hist.py  plot_ecg.py  plot_fft.py  plot_filter.py  plot_hist.py  plot_rp.py  plot_spectral_envelope.py  plotly_vis.py
(+4 files in other folders)
