[tool.poetry]
name = "thesis_code"
version = "0.1.0"
description = ""
authors = ["carstengieshoff <carsten.gieshoff@rwth-aachen.de>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.1"
pre-commit = "^2.17.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
