[tool.poetry]
name = "thesis_code"
version = "0.1.0"
description = ""
authors = ["carstengieshoff <carsten.gieshoff@rwth-aachen.de>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.22.1"
pre-commit = "^2.17.0"
scipy = "^1.7.3"
kymatio = "^0.2.1"
torch = "^1.10.2"
Cython = "^0.29.27"
pyunicorn = "^0.6.1"
PyRQA = "^8.0.0"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
