[tool.poetry]
name = "thesis_code"
version = "0.1.0"
description = ""
authors = ["carstengieshoff <carsten.gieshoff@rwth-aachen.de>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = ">=1.20.0"
pre-commit = "^2.17.0"
scipy = "^1.7.3"
kymatio = "^0.2.1"
torch = "^1.10.2"
Cython = "^0.29.27"
pyunicorn = "^0.6.1"
PyRQA = "^8.0.0"
jupyter = "^1.0.0"
matplotlib = "^3.5.1"
pandas = "^1.4.0"
tqdm = "^4.62.3"
wfdb = "^3.4.1"
openpyxl = "^3.0.9"
numba = "^0.55.1"
pytest = "^7.0.0"
teaspoon = "^1.2.5"
autopep8 = "^1.6.0"
ipykernel = "^6.9.1"
neurokit2 = "^0.1.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
